@@ -1,5 +1,7 @@
 Major changes between version 0.99 and 0.99.1.
 ------------------------------------------------
+  - Map protocol numbers to names when logging debug info for
+    firewall rule matches.
   - Wrong iovec count when sending packets on an ethertap proxy.
   - Moved the monitor "INTERFACE" output so that it happens
     even if an ifsetup script is used.
